--- a/app/styles/pages/pages-shared.scss
+++ b/app/styles/pages/pages-shared.scss
@@ -26,6 +26,8 @@
 @use './get-involved/institutional-chaplains';
 
 .page-container {
+    overflow: hidden;
+
     p {
         font-size: 1.2rem;
 
@@ -311,6 +313,8 @@
             display: flex;
             flex-direction: column;
             align-items: stretch;
+            grid-row-gap: 1rem;
+            grid-column-gap: 1rem;
         }
 
         &.bigger-text {
